# webapp-rs

./: .gitignore  .rustup  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  docker-compose.yml  env.sh  test.sh
.circleci/: config.yml
src/: lib.rs  main.rs  models.rs  pool.rs  routes.rs
