[package]
authors = ["clux"]
name = "webapp"
version = "0.1.0"

[[bin]]
doc = false
name = "webapp"
path = "src/main.rs"

[dependencies]
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"

[dependencies.diesel]
features = ["postgres"]
version = "0.16.0"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.16.0"

[profile.release]
lto = true

[patch.crates-io]
pq-sys = { git = 'https://github.com/golddranks/pq-sys' }
