[package]
authors = ["clux"]
name = "webapp"
version = "0.2.0"

[[bin]]
doc = false
name = "webapp"
path = "src/main.rs"

[dependencies]
diesel_migrations = "1.3.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
rocket = "0.3.3"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.10"

[dependencies.diesel]
features = ["postgres"]
version = "1.1.1"


[profile.release]
lto = true
